# piedventure

./: .gitignore  .style.yapf  README.md  pyproject.toml  ruff.toml
piedventure/: __init__.py  __main_.py  adventure.py  lib.py
piedventure/rooms/: bigroom.py  brown.py  endroom.py  gameroom.py  green.py  grue.py  kroo.py  kroo2.py  mainroom.py  red.py  start.py  white.py
