[tool.poetry]
name = "piedventure"
version = "0.1.0"
description = "Python port of BashVenture - Adventure for Bash"
authors = ["Barend Scholtus <barend.scholtus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
piedventure = "piedventure.adventure:main"
