[tool.poetry]
name = "piedventure"
version = "1.0.1"
description = "Python port of BashVenture - Adventure for Bash"
authors = ["Barend Scholtus <barend.scholtus@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rbscholtus/piedventure"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Topic :: Games/Entertainment",
    "Intended Audience :: End Users/Desktop",
]


[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
piedventure = "piedventure.adventure:main"
